--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Problems/CaseGrid.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Problems/CaseGrid.cshtml
@@ -1,20 +1,21 @@
 ﻿@model IList<DH.Helpdesk.Web.Models.Problem.CaseOutputModel>
 <table id="tblCases" class="table table-striped table-bordered table-hover">
     <thead>
-        <tr>
-            <th>@Translation.Get("Ärende", Enums.TranslationSource.TextTranslation)
-            </th>
-            <th>@Translation.Get("Registreringsdatum", Enums.TranslationSource.TextTranslation)
-            </th>
-            <th>@Translation.Get("Ärendetyp", Enums.TranslationSource.TextTranslation)
-            </th>
-            <th>@Translation.Get("Understatus", Enums.TranslationSource.TextTranslation)
-            </th>
-            <th>@Translation.Get("Rubrik", Enums.TranslationSource.TextTranslation)
-            </th>
-            <th>@Translation.Get("Bevakningsdatum", Enums.TranslationSource.TextTranslation)
-            </th>
-        </tr>
+    <tr>
+        <th style="width: 18px"></th>
+        <th>@Translation.GetCoreTextTranslation("Ärende")
+        </th>
+        <th>@Translation.GetCoreTextTranslation("Registreringsdatum")
+        </th>
+        <th>@Translation.GetCoreTextTranslation("Ärendetyp")
+        </th>
+        <th>@Translation.GetCoreTextTranslation("Understatus")
+        </th>
+        <th>@Translation.GetCoreTextTranslation("Rubrik")
+        </th>
+        <th>@Translation.GetCoreTextTranslation("Bevakningsdatum")
+        </th>
+    </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
@@ -23,9 +24,11 @@
             if (item.WatchDate != null)
             {
                 watchDate = item.WatchDate.Value.ToShortDateString();
-
             }
-            <tr style="cursor: pointer" onclick=" window.location.href = '@Url.Action("Edit", "Cases", new RouteValueDictionary { { "id", item.Id } })'">
+            <tr style="cursor: pointer" onclick=" window.location.href = '@Url.Action("Edit", "Cases", new RouteValueDictionary {{"id", item.Id}})'">
+                <td>
+                    <img class="img-case-parent" title="@item.CaseIcon.CaseIconTitle()" alt="@item.CaseIcon.CaseIconTitle()" src="/Content/icons/@item.CaseIcon.CaseIconSrc()">
+                </td>
                 <td>@Html.DisplayFor(x => item.CaseNumber)
                 </td>
                 <td>@Html.DisplayFor(x => item.RegistrationDate)
