--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -147,8 +147,7 @@
 <div class="jumbotron greybar">
     <div class="container-fluid">
         <div class="col-lg-12 secnav">
-
-            <input id="btnSave" type="button" value='@Translation.Get("Save")' class="btn btn-default pull-left" style="margin-right:20px !important;" />
+            <input id="btnSave" type="button" value='@((Model.WorkflowSteps != null && Model.WorkflowSteps.Any()) ? Translation.Get("Save") : Translation.Get("Save and Send"))' class="btn btn-default pull-left" style="margin-right:20px !important;" />
             @if (Model.WorkflowSteps != null && Model.WorkflowSteps.Any())
             {
                 <div class="input-group">
@@ -163,7 +162,7 @@
                         }
                     </select>
                     <span class="input-group-btn pull-left">
-                        <input id="btnGo" type="button" class="btn btn-default go-button" value="@Translation.Get("Send")" />
+                        <input id="btnGo" type="button" class="btn btn-default go-button" value="@Translation.Get("Send")"/>
                     </span>
                 </div>
 
